# origin

./: .gitignore
INI_parser/INI_parser/: INI_parser.sln  INI_parser.vcxproj  INI_parser.vcxproj.filters  config.ini  ini_parser.h  main.cpp
RaceGame/: CMakeLists.txt  CMakePresets.json  README.md
RaceGame/app/: main.cpp
RaceGame/lib/: CMakeLists.txt
RaceGame/lib/include/: AirVehicle.h  LandVehicle.h  Race.h  RaceType.h  Vehicle.h  racing_export.h
RaceGame/lib/include/vehicles/: AllTerrainBoots.h  Broom.h  Camel.h  CamelFast.h  Carpet.h  Centaur.h  Eagle.h
RaceGame/lib/src/: AirVehicle.cpp  AllTerrainBoots.cpp  Broom.cpp  Camel.cpp  CamelFast.cpp  Carpet.cpp  Centaur.cpp  Eagle.cpp  LandVehicle.cpp  Race.cpp  Vehicle.cpp
Safe_Queue/Safe_Queue/: Safe_Queue.sln  Safe_Queue.vcxproj  Safe_Queue.vcxproj.filters  main.cpp  safe_queue.h  thread_pool.h
cppl_homeworks_02/task_01/error_application/: error_application.sln
cppl_homeworks_03/task_1/smart_array/: main.cpp  smart_array.cpp  smart_array.h  smart_array.sln  smart_array.vcxproj  smart_array.vcxproj.filters
cppl_homeworks_03/task_2/smart_array_copy/: main.cpp  smart_array_copy.sln  smart_array_copy.vcxproj  smart_array_copy.vcxproj.filters
cppl_homeworks_04/task_1/: CMakeLists.txt  list.cpp  test.cpp
cppl_homeworks_04/task_2/: CMakeLists.txt  list.cpp  list.h  test.cpp
cppl_homeworks_05/task_1/square/: main.cpp  square.h  square.sln  square.vcxproj  square.vcxproj.filters
cppl_homeworks_05/task_2/table/: main.cpp  table.h  table.sln  table.vcxproj  table.vcxproj.filters
cppl_homeworks_05/task_3/counter/: counter.sln  counter.vcxproj  main.cpp
cppl_homeworks_07/task_1/symbols/: main.cpp  symbols.sln  symbols.vcxproj
cppl_homeworks_07/task_2/delete_clones/: delete_clones.sln  delete_clones.vcxproj  main.cpp
cppl_homeworks_07/task_3/vector_analog/: main.cpp  vector_analog.h  vector_analog.sln  vector_analog.vcxproj  vector_analog.vcxproj.filters
cppl_homeworks_08/task_1/unique_vector/: main.cpp  unique_vector.sln  unique_vector.vcxproj
cppl_homeworks_08/task_2/print_container/: main.cpp  print_container.sln  print_container.vcxproj
cppl_homeworks_10/task_1/clone_class/: clone_class.sln  clone_class.vcxproj  main.cpp
cppl_homeworks_10/task_2/remove_cross_links/: main.cpp  remove_cross_links.sln  remove_cross_links.vcxproj
cppl_homeworks_10/task_3/custom_unique_ptr/: custom_unique_ptr.sln  custom_unique_ptr.vcxproj  main.cpp
cppl_homeworks_11/task_01/Move_Objects/: Move_Objects.sln  Move_Objects.vcxproj  Move_Objects.vcxproj.filters  move_objects.cpp
cppl_homeworks_11/task_02/Big_Nums/: Big_Nums.sln  Big_Nums.vcxproj  Big_Nums.vcxproj.filters  big_nums.cpp
dpcpp_homeworks_01/task_01/QueryBuilder/: QueryBuilder.sln  QueryBuilder.vcxproj  QueryBuilder.vcxproj.filters  main.cpp  sql_query_builder.cpp  sql_query_builder.h
dpcpp_homeworks_01/task_02/QueryBuilder_Advance/: QueryBuilder_Advance.sln  QueryBuilder_Advance.vcxproj  main.cpp  sql_query_builder.cpp  sql_query_builder.h
dpcpp_homeworks_03/task_01/Command/: Command.cpp  (+3 more)
homeworks_10/task_02/CMake_Classes/class_hierarchy/: CMakeLists.txt  EquilateralTriangle.cpp  Figure.h  IsoscelesTriangle.h  Quadrangle.cpp  Rhombus.cpp  RightTriangle.cpp  Triangle.cpp  main.cpp
map_homeworks_05/task_01/: Dockerfile
map_homeworks_05/task_02/: Dockerfile.clang  Dockerfile.gcc
sqlcpp_homeworks_05/task_01/SQLCPP/: CMakeLists.txt  main.cpp
unit_test/unit_test/: CMakeLists.txt  extended_array.h  main.cpp
(+189 files in other folders)
